tests/snapshots/e2e__e2e_complex_nested_json__pseudo__n1000.snap
---
source: tests/e2e.rs
expression: stdout
---
{
  "users": [
    {
      "id": 1,
      "name": "Alice Wonderland",
      "roles": [
        "admin",
        "editor",
        "viewer"
      ],
      "profile": {
        "bio": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incid…",
        "social": {
          "twitter": "@alice",
          "github": "alice",
          "web": "https://example.com/users/alice"
        }
      }
    },
    {
      "id": 2,
      "name": "Bob Builder",
      "roles": [
        "contributor",
        "viewer"
      ],
      "profile": {
        "bio": "Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip e…",
        "social": {
          "twitter": "@buildWithBob",
          "github": "bobbuilder",
          "web": "https://bob.example.org"
        }
      }
    }
  ],
  "meta": {
    "page": 1,
    "pageSize": 20,
    "next": null,
    "tags": [
      "alpha",
      …
      "gamma",
      …
      "epsilon"
      …
    ]
  }
}
