tests/snapshots/e2e__e2e_complex_nested_json__pseudo__n250.snap
---
source: tests/e2e.rs
expression: stdout
---
{
  "users": [
    {
      "id": 1,
      "name": "…",
      "roles": [ … ],
      "profile": { … }
    },
    {
      "id": 2
      …
    }
  ],
  "meta": {
    "page": 1,
    "pageSize": 20,
    "next": null,
    "tags": [ … ]
  }
}
